# kicad-ai-project-creator

./: .gitignore  README.md  boardwright_system_prompt.txt  kicad_mcp_server.py  pyproject.toml  requirements.txt  setup.sh
.claude/: settings.json
.github/workflows/: deploy-web.yml  test.yml
boardwright/: backends.py  router.py  server.py  sexpr.py  state.py
boardwright/tools/: __init__.py  _pcb_writer.py  fabrication.py  pcb_checks.py  pcb_layout.py  research.py
docs/: PROJECT.md  troubleshooting.md
kicad_agent/: __init__.py  backends.py  dispatcher.py  router.py  schematic_io.py  state.py  tools.py
kicad_agent/tools/: _pcb_writer.py  filesystem.py  pcb_checks.py  pcb_layout.py  project.py  research.py  routing.py  schematic.py
tests/: conftest.py  test_coerce.py  test_dispatch.py  test_router.py  test_sexpr.py  test_tool_registry.py
web/: .cta.json  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  wrangler.jsonc
web/public/: manifest.json  robots.txt
web/src/: styles.css
web/src/components/: newsletter-form.tsx
web/src/components/shared/: ThemeToggle.tsx  footer.tsx  header.tsx
web/src/routes/: __root.tsx  index.tsx
web/src/server/: waitlist.ts
