[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kicad-ai"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "kicad-python>=0.6.0",
]

[project.optional-dependencies]
test = ["pytest>=7", "jsonschema>=4"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
